Webserver: fix list item alignment when description is empty

--- a/buildsystem/network-sharing-server/src/scss/app.scss
+++ b/buildsystem/network-sharing-server/src/scss/app.scss
@@ -209,6 +209,7 @@ body {
 
 .media-text {
   margin-top: 0.5em;
+  margin-bottom: 0.5em;
   min-width: 0;
 }
 
